erxes latest code

--- a/plugins/loanApplication/api/package.json
+++ b/plugins/loanApplication/api/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "erxes-api-utils": "^0.0.29",
     "lodash": "^4.17.21",
+    "meteor-random": "^0.0.3",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
-    "mongoose": "^5.12.15"
+    "mongoose": "^5.12.15",
+    "node-json2html": "^2.1.0"
   }
 }
