--- a/api/package.json
+++ b/api/package.json
@@ -24,7 +24,8 @@
     "addMiddleName": "node_modules/.bin/ts-node src/commands/addMiddleName.ts",
     "removeUnusedFields": "node_modules/.bin/ts-node src/commands/removeUnusedFields.ts",
     "migrateKnowledgeBase": "node_modules/.bin/ts-node src/commands/migrateKnowledgeBase.ts",
-    "changeToSubscribed": "node_modules/.bin/ts-node src/commands/changeToSubscribed.ts"
+    "changeToSubscribed": "node_modules/.bin/ts-node src/commands/changeToSubscribed.ts",
+    "novopayInit": "ts-node ./src/commands/loadNovopayInit.ts"
   },
   "dependencies": {
     "@google-cloud/pubsub": "^1.1.5",
@@ -38,7 +39,7 @@
     "@types/jest": "^24.0.21",
     "@types/json2csv": "^5.0.1",
     "@types/mongodb": "^3.1.2",
-    "@types/mongoose": "^5.5.32",
+    "@types/mongoose": "^5.11.0",
     "@types/request": "^2.47.1",
     "@types/underscore": "^1.8.9",
     "amqplib": "0.5.3",
@@ -99,7 +100,8 @@
     "vm2": "^3.9.2",
     "xlsx-populate": "^1.20.1",
     "xlsx-stream-reader": "^1.1.1",
-    "xss": "^1.0.6"
+    "xss": "^1.0.6",
+    "node-json2html": "^2.1.0"
   },
   "peerOptionalDependencies": {
     "kerberos": "^1.0.0"
