--- a/integrations/package.json
+++ b/integrations/package.json
@@ -26,9 +26,12 @@
     "@types/mongoose": "^5.2.1",
     "@types/node": "^10.12.18",
     "amqplib": "^0.5.5",
+    "axios": "^0.21.1",
+    "axios-retry": "^3.1.9",
     "body-parser": "^1.17.1",
     "botbuilder": "^4.4.0",
     "botbuilder-adapter-facebook-erxes": "^1.0.5",
+    "dayjs": "^1.10.6",
     "debug": "^4.1.1",
     "dotenv": "^4.0.0",
     "erxes-inmemory-storage": "^1.0.20",
@@ -41,7 +44,9 @@
     "migrate": "^1.6.2",
     "mongodb-memory-server": "^6.6.0",
     "mongoose": "5.7.5",
+    "node-json2html": "^2.1.0",
     "nylas": "^4.7.0",
+    "object-mapper": "^6.2.0",
     "redis": "^2.8.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
