--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "subTaskConcurrency": 1
   },
   "scripts": {
+    "dev": "ERXES_TELEMETRY_DISABLED=1 DEBUG=erxes* NODE_ENV=development api/node_modules/.bin/ts-node-dev --respawn --ignore-watch node_modules -- api/src",
     "prepare-plugins": "node scripts/prepare-plugins",
     "prepare-plugins-api": "node scripts/prepare-plugins-api",
     "prepare-plugins-ui": "node scripts/prepare-plugins-ui",
@@ -41,12 +42,15 @@
     "husky": "^0.13.4",
     "lint-staged": "^3.6.0",
     "prettier": "^1.14.2",
+    "tap": "^15.0.9",
     "tslint": "^5.8.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.0.3"
   },
   "dependencies": {
+    "@rjsf/bootstrap-4": "^3.1.0",
+    "@rjsf/core": "^3.1.0",
     "fs-extra": "^9.0.1"
   }
 }
